Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106462

/Users/qt/work/install/target/include/QtCore/6.5.0/QtCore/private/qsimd_p.h:216:12: fatal error: 'qsimd_x86_p.h' file not found

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.5.0 Beta1
    • 6.5.0 FF
    • SVG Support
    • None
    • 1e9c97011a (qt/qtbase/dev) 1e9c97011a (qt/tqtc-qtbase/dev)

    Description

      /Users/qt/work/install/target/include/QtCore/6.5.0/QtCore/private/qsimd_p.h:216:12: fatal error: 'qsimd_x86_p.h' file not found
      agent:2022/09/08 12:34:55 build.go:394: #  include "qsimd_x86_p.h"
      

      Build log: https://testresults.qt.io/logs/qt/qtsvg/575bae381c0a525aed5efde69d6b2196388529fb/MacOSMacOS_12x86_64IOSIOS_ANYarm64Clangqtci-macos-12-x86_64-102-37becfDebugAndRelease_DisableTests_Sccache_UseConfigure/0121810c9d65d4accbae1d5d3954e4f4e42f2c4a/build_1664268628/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtsvg/tasks/1664268217

      Tested changes (refs/builds/qtci/dev/1662634874):
      https://codereview.qt-project.org/c/qt/qtsvg/+/431405/2 Update dependencies on 'dev' in qt/qtsvg

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semlanik Alexey Edelev
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes